--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -5,13 +5,21 @@
         = current_user.name
       .side_header__box__menu 
         .side_header__box__menu__new_group
-          %i.fas.fa-cog
+          = link_to new_group_path do
+            %i.fas.fa-edit
         .side_header__box__menu__edit_user
           = link_to edit_user_path(current_user) do
-            %i.fas.fa-edit
+            %i.fas.fa-cog
           
     
   .group_list
+  - current_user.groups.each do |group|
+    .group
+      = link_to '#' do
+        .group__name
+          = group.name
+        .group__message
+          メッセージはまだありません。
     .group_box
       .group_box__name
         hiro
